--- a/login.html
+++ b/login.html
@@ -55,6 +55,6 @@
         <p>Todos los derechos reservados</p>
       </span>
     </footer>
-    <script src="./index.js"></script>
+    <script src="./claseSuarez.js"></script>
   </body>
 </html>
