--- a/login.html
+++ b/login.html
@@ -31,15 +31,15 @@
         </div>
         <div>
           <label for="telNumber">Numero De Telefono</label>
-          <input type="text" id="telNumber" />
+          <input type="number" id="telNumber" />
         </div>
         <div>
           <label for="gmail">Correo Electronico</label>
-          <input type="text" id="gmail" />
+          <input type="email" id="gmail" />
         </div>
         <div>
           <label for="password">Constraseña</label>
-          <input type="text" id="password" />
+          <input type="password" id="password" />
         </div>
         <div class="submit">
           <input type="submit" />
@@ -55,6 +55,6 @@
         <p>Todos los derechos reservados</p>
       </span>
     </footer>
-    <script src="./claseSuarez.js"></script>
+    <script src="./login.js"></script>
   </body>
 </html>
